manifests/overlays/staging/class-management-student-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-deployment
  labels:
    app: class-management-student-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: class-management-student-service
  template:
    metadata:
      labels:
        app: class-management-student-service
    spec:
      imagePullSecrets:
        - name: harbor-secret
      containers:
        - name: class-management-student-service-container
          image: harbor.th1enlm02.live/staging/class-management-student-service:70bd524-1734374612 # {"$imagepolicy": "staging:student-service-policy"}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
