manifests/overlays/staging/class-management-student-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-service-ingress
spec:
  rules:
  - host: stag-student-api.th1enlm02.live
    http:
      paths:
        - path: /student
          pathType: Prefix
          backend:
            service:
              name: student-service
              port:
                number: 8080
